--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
-  "name": "gaming-hub",
+  "name": "gamezone",
   "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint",
+    "compress-images": "node scripts/compress-images.js"
   },
   "dependencies": {
-    "next": "^13.4.0",
+    "next": "^14.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "axios": "^1.3.4",
-    "tailwindcss": "^3.2.7",
-    "postcss": "^8.4.21",
-    "autoprefixer": "^10.4.13",
-    "@heroicons/react": "^2.0.17"
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.35",
+    "sharp": "^0.33.2",
+    "tailwindcss": "^3.4.1"
   }
 } 
